added some features

--- a/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/add-inv-items.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/add-inv-items.html
@@ -62,7 +62,7 @@
              
               {% for item in allifqueryset %} 
               <tr data-id="{{item.id}}">
-              <td><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonStockItemDetails' item.items.id user_var glblslug %}">{{item.items}}</a></td>
+              <td><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonStockItemDetails' item.items.id user_var glblslug %}">{{item.items.name}}</a></td>
             
           <td>{{item.quantity|floatformat:2|intcomma}}</td>
           <td>{{item.discount|floatformat:2|intcomma}}%</td>
