--- a/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/invoices.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/invoices/invoices.html
@@ -15,6 +15,7 @@
   <a href="{% allif_get_single_nav_link_url 'Invoices' user_var glblslug %}">Invoices</a>
  <a href="{% allif_get_single_nav_link_url 'AddInvoice' user_var glblslug %}">New Invoice</a>
  <a href="{% allif_get_single_nav_link_url 'CreditNotes' user_var glblslug %}">Credit Notes</a>
+  <a href="">Broadcast Invoicing</a>
 
  
   {% endblock %}
