--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/add-space.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/add-space.html
@@ -19,6 +19,10 @@
       <td>{{form.number_of_units}}</td>
     </tr>
     <tr>
+      <td class="allif-fix-table-col-forms">Taken Units</td>
+      <td>{{form.taken_units}}</td>
+    </tr>
+    <tr>
       <td class="allif-fix-table-col-forms">No. of Bedrooms</td>
       <td>{{form.number_of_bedrooms}}</td>
     </tr>
