--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/space-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/space-details.html
@@ -49,6 +49,17 @@
       <td class="allif-fix-table-col">#Units</td>
       <td>{{allifquery.number_of_units}}</td>
     </tr>
+
+      <tr>
+        <td class="allif-fix-table-col">#Taken Units</td>
+        <td>{{allifquery.taken_units}}</td>
+      </tr>
+      <tr>
+      <td class="allif-fix-table-col">Occupancy Rate</td>
+      <td>{{allifquery.occupancy_rate}}</td>
+    </tr>
+
+
      <tr>
       <td class="allif-fix-table-col">#Bedrooms</td>
       <td>{{allifquery.number_of_bedrooms}}</td>
