--- a/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/add_space_unit.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/spaces/units/add_space_unit.html
@@ -59,6 +59,11 @@
       <td class="allif-fix-table-col-forms">Current Status</td>
       <td>{{form.current_status}}</td>
     </tr>
+
+     <tr>
+      <td class="allif-fix-table-col-forms">Customer</td>
+      <td>{{form.customer}}</td>
+    </tr>
     
     <tr>
       <td class="allif-fix-table-col-forms">Staff in Charge</td>
