--- a/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/stocks/add-stock.html
@@ -141,7 +141,7 @@
     {% block bottom-fields-col-two %}
       
      <tr>
-      <td class="allif-fix-table-col-forms">Warehouse</td>
+      <td class="allif-fix-table-col-forms">Location</td>
       <td>{{form.warehouse}}</td>
     </tr>
 
