--- a/allifmaallogisticsapp/templates/allifmaallogisticsapp/flights/flight_pdf.html
+++ b/allifmaallogisticsapp/templates/allifmaallogisticsapp/flights/flight_pdf.html
@@ -13,7 +13,7 @@
 <div class="allif-table-pdf-header">
 <table class="allif-pdf-table-header-section">
     <tr>
-      <th>Shipment Details</th>
+      <th>Flight Details</th>
       <th>Delivery Details</th>
       <th>Terms Details</th>
       
@@ -21,7 +21,7 @@
 
     <tr> 
     <td>
-    <li><span class="allif-pdf-table-content-headers">Shipment.No.</span> {{allifquery.shipment_number}}</li>
+    <li><span class="allif-pdf-table-content-headers">Flight.No.</span> {{allifquery.shipment_number}}</li>
     <li><span class="allif-pdf-table-content-headers">Department</span> {{allifquery.department}}</li>
     <li><span class="allif-pdf-table-content-headers">Date</span> {{allifquery.date|date:'d/m/Y'}}</li>
     </td>
