--- a/allifmaallogisticsapp/templates/allifmaallogisticsapp/flights/delete-flight-confirm.html
+++ b/allifmaallogisticsapp/templates/allifmaallogisticsapp/flights/delete-flight-confirm.html
@@ -2,9 +2,9 @@
 {% load allif_navigation_tags %}
  
 {% block delete-action-decline %}
-<a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Transits' user_var glblslug %}">No, Dont Delete {{allifquery}}</a>
+<a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'flights' user_var glblslug %}">No, Dont Delete {{allifquery}}</a>
 {% endblock %}
 
 {% block delete-action-confirm %}
-<a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonDeleteTransit' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a>
+<a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaallogisticsapp:deleteFlight' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a>
 {% endblock %}
