--- a/allifmaallogisticsapp/templates/allifmaallogisticsapp/flights/tickets/add_tickets.html
+++ b/allifmaallogisticsapp/templates/allifmaallogisticsapp/flights/tickets/add_tickets.html
@@ -2,12 +2,10 @@
 {% load allif_navigation_tags %}
 
  {% block add-form-header-block %}
+<a href="{% allif_get_single_nav_link_url 'flights' user_var glblslug %}">Flights</a>
+ <a href="{% allif_get_single_nav_link_url 'newFlight' user_var glblslug %}">New Flight</a>
+<a href="{% allif_get_single_nav_link_url 'flightTickets' user_var glblslug %}">Tickets</a>
 
-<a href="{% allif_get_single_nav_link_url 'Transits' user_var glblslug %}">Transports</a>
-<a href="{{ allif_contextual_action_links.AddTransitDetails.url }}">Shipment Details</a>
-<a href="{{ allif_contextual_action_links.AddShipmentItems.url }}">Add Items</a>
-<a href="{{ allif_contextual_action_links.TransitPdf.url }}">Download Shipment</a>
- 
 {% endblock %}
 
    {% block core-tab-col-one %}
@@ -113,13 +111,13 @@
   {% block allif_sensitive_section_col_one %}
     <tr>
       <td class="allif-fix-table-col"> {{allifquery}}</td>
-      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Transits' user_var glblslug %}">Go Back</a></td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'flightTickets' user_var glblslug %}">Go Back</a></td>
     </tr>
   {% endblock %}
   {% block allif_sensitive_section_col_two %}
     <tr>
       <td class="allif-fix-table-col">Delet {{allifquery}}</td>
-      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.DeleteTransitConfirm.url }}">Delete {{allifquery}}</a></td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.deleteFlightTicketConfirm.url }}">Delete {{allifquery}}</a></td>
     </tr>
     
     {% endblock %}
