--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ui/forms/add-form.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ui/forms/add-form.html
@@ -55,7 +55,7 @@
 {% endif %}
 
   <div class="allif-form-main-wrapper">
-    <form method='POST' action=''>{% csrf_token %}
+    <form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
 
 
     <!--START.... start of single pages content and its links section-->
