--- a/allifmaallogisticsapp/templates/allifmaallogisticsapp/flights/flights.html
+++ b/allifmaallogisticsapp/templates/allifmaallogisticsapp/flights/flights.html
@@ -22,10 +22,11 @@
   {%endblock%}
   {% block list-table-headers %}
   <td class="allif-fix-table-col"> Number</td>
+  <td class="allif-table-header-td">Carrier</td>
    <td class="allif-table-header-td">Origin</td>
   
   <td class="allif-table-header-td">Destination</td>
-  <td class="allif-table-header-td">Via</td>
+
   <td class="allif-table-header-td">Status</td>
   <td class="allif-table-header-td">Date</td>
   {% endblock %}
@@ -34,11 +35,11 @@
   {% block list-table-content-seciton %}
   <td class="allif-fix-table-col">{% block list-table-content-seciton-links %}
   <a class="allif-table-links" href="{% url 'allifmaallogisticsapp:addFlightDetails' item.id user_var glblslug %}"> {{item.number}} </a>{%endblock%}</td>
-  
+  <td class="allif-table-content-td"> {{item.carrier}} </td>
   <td class="allif-table-content-td"> {{item.origin}} </td>
   <td class="allif-table-content-td">{{item.destination}}</td>
-  <td class="allif-table-content-td">{{item.via}}</td>
-  <td class="allif-table-content-td">{{item.transit_status}}</td>
+  
+  <td class="allif-table-content-td">{{item.flight_status}}</td>
   <td class="allif-table-content-td">{{item.date|date:'d/m/Y'}}</td>
   {% endblock %}
   {% block list-table-content-seciton-dropdown-links %}
